tests/diagnostic_golden_cc/free_parse_continuation.diag
tests/diagnostic_golden_cc/free_parse_continuation.f90:3:3: error[CF2004]: missing required identifier
help: see docs/errors.md#CF2004
  )
  ^
